Fixing footer nav font too small

--- a/css/style.css
+++ b/css/style.css
@@ -450,5 +450,9 @@ Media Queries
         width: 80%;
         margin-bottom: 5%;
     }
+
+    .footer-nav {
+        font-size: 1.2em;
+    }
     
 }
